kubernetes/apps/default/gitea/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: default
  labels:
    app: gitea
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
      annotations:
        config/restart: "2026-01-21"
    spec:
      containers:
        - name: gitea
          image: gitea/gitea:28.0.0
          ports:
            - name: http
              containerPort: 3000
            - name: ssh
              containerPort: 2222
          volumeMounts:
            - name: gitea-data
              mountPath: /data
      volumes:
        - name: gitea-data
          persistentVolumeClaim:
            claimName: gitea-data-pvc-lh
